--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="description" content="A test page for a JS dropdown menu">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" type="text/javascript"></script>
+    <script src="https://kit.fontawesome.com/d3dd539928.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <nav>
+      <i class="fas fa-bars"></i>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">News</a></li>
