--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Dropdown</title>
-    <meta name="description" content="A test page for a JS dropdown menu">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="A test page for a JS dropdown menu" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" type="text/javascript"></script>
-    <script src="https://kit.fontawesome.com/d3dd539928.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d3dd539928.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <nav>
-      <i class="fas fa-bars"></i>
+    <nav class="nav nav-open">
+      <!--<i class="fas fa-bars"></i>-->
+      <i class="fas fa-times"></i>
+
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">News</a></li>
