--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
       src="https://kit.fontawesome.com/d3dd539928.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
-    <nav class="nav nav-open">
-      <!--<i class="fas fa-bars"></i>-->
-      <i class="fas fa-times"></i>
-
+    <nav class="nav">
+      <div id="nav-button"></div>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li class="nav-active"><a href="#">Home</a></li>
         <li><a href="#">News</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">About</a></li>
